fix: collapse

--- a/sass/constant/_font-sizes.scss
+++ b/sass/constant/_font-sizes.scss
@@ -1,6 +1,6 @@
-$xs: 0.7rem;
-$sm: 1rem;
-$md: 1.2rem;
-$lg: 1.5rem;
-$xl: 2rem;
-$xxl: 3.9rem;
+$xs: 0.7em;
+$sm: 1em;
+$md: 1.2em;
+$lg: 1.5em;
+$xl: 2em;
+$xxl: 3.9em;
