--- a/sass/constant/_globals-class.scss
+++ b/sass/constant/_globals-class.scss
@@ -8,6 +8,7 @@ body {
 	background: setColor(bg);
 	color: setColor(txt_color);
 	font-family: "Lato", sans-serif;
+	font-size: 16px;
 }
 
 h1 {
