--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -89,13 +89,13 @@
 			width: 100%;
 			height: auto;
 			.category-card {
-				margin: 1rem;
 				position: relative;
 				height: auto;
-				min-height: 350px;
+				min-height: 300px;
+				margin: 1.5em 0;
 
 				h2 {
-					margin: 1rem;
+					margin: 0 1.2rem;
 				}
 
 				.category {
